--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,13 @@
   background-color: #0b5570 !important;
   height: 5px;
   width: 17%;
+  margin-bottom: 10px;
+  margin-top: -30px;
+}
+.caret {
+  font-size: 250%;
+  margin-top: 75%;
+}
+.team {
+  font-size: 800%;
 }
