--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,8 @@
   text-transform: uppercase;
 }
 .border-blue {
-  border: 1px solid #0b5570 !important;
+  border-width: 1px  !important;
+  border-color: #0b5570 !important;
 }
 .nav-link:hover {
   color: gray !important;
