--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,9 @@
 .nav-link img:hover {
   opacity: 0.5;
 }
+
+@media only screen and (max-width: 600px) {
+  .signup-login-box {
+    padding: 0px 0px;
+  }
+}
